--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-web": "~0.18.7"
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4",
     "typescript": "~4.3.5"
   },
   "private": true
