--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "@types/uuid": "^8.3.4",
     "typescript": "~4.3.5"
   },
